2019-07-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use middle dot instead of multiplication x in unit expressions
	* Fix alignment and improve spacing in flat division (primarily in unit expressions)
	* Improve display of abs(), ceil(), and floor()
	* Move negative exponents menu item (negative exponents now only applies to units)
	* Disable prefixes by default for scientific, engineering, and pure modes
	* Do not disable sort minus last and enable negative exponents in scientific and pure modes if these options has been explicitely set by the user (when in one of these modes)

2019-07-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix and improve display of division
	* Improve display of roots

2019-06-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to hide left or right part of the keypad
	* Replace fraction mode combo box with a single toggle button

2019-06-23 Fúlvio Alves <fga.fulvio@gmail.com>

	* Portuguese (Brazil) translation

2019-06-19 Nejc Bertoncelj <nejc@bertoncelj.eu.org>

	* Slovenian translation

2019-06-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Restore keypad button hover appearance after long press

2019-06-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Hide tooltip after keypad button click

2019-05-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow multiple "to"-conversions in one expression (e.g. "5 m/s to hex to ft to h = 0xE6AF.1E*ft∕h)
	* Option to clear history on exit
	* Support specification of number of bits for hexadecimal "to" conversion (4 to hex16 = 0004)

2019-05-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Divide value with time units by hours if time format is used

2019-05-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not add current calculation again to history after removing (or moving) history item, when calculate-as-you-type is activated
	* Do not clear result after removal of history item, if not the current result was removed
