@@ -1,3 +1,8 @@
+2019-07-10 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix Insert button in insert function dialog
+	* Fix updating of operator symbols in result when preferences change
+
 2019-07-04 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Use middle dot instead of multiplication x in unit expressions
